# Compress

./: compressSDK.rar
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/blueberry/compress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: compress.c  compress.h
app/src/main/java/com/blueberry/compress/: ImageCompress.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/blueberry/compress/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
test/: build.gradle
test/src/androidTest/java/com/blueberry/test/: ExampleInstrumentedTest.java
test/src/main/: AndroidManifest.xml
test/src/main/java/com/blueberry/test/: MainActivity.java
test/src/main/res/layout/: activity_main.xml
